<resources>
    <string name="app_name">WbudyApp</string>
    <string name="button">Start</string>
    <string name="title_activity_boss_level">BossLevel</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="prox_value">Prox Value:</string>
    <string name="prox_value_max">Max prox Value:</string>
    <string name="test_proximity_sensor">Test Proximity sensor!</string>
    <string name="put_your_hand_above_the_phone">Put your hand above the phone \n and try to press the Button</string>
    <string name="test_light_sensor">Test light sensor!</string>
    <string name="it_is_x">It is x</string>
    <string name="light_reading">Light reading</string>
    <string name="get_location">Get Location</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="you_are_here">You are here:</string>
    <string name="distance_to_p">Distance to PŁ</string>
    <string name="gps_page">GPS Page</string>
    <string name="button_text">Button</string>
    <string name="check_gps">Check GPS</string>
    <string name="check_proximity">Check Proximity</string>
    <string name="check_levels">Check Levels</string>
    <string name="check_light_sensor">Check Light sensor</string>
    <string name="next_level_unlocked">NEXT LEVEL UNLOCKED!</string>
    <string name="current_level">Current level</string>
    <string name="level_score">Level Score</string>
    <string name="shake_to_go_to_the_next_level">Shake to go to the next level</string>
    <string name="total_score">Total Score</string>
    <string name="y_value">Y Value</string>
    <string name="x_value">X Value</string>
    <string name="z_value">Z value</string>
    <string name="level_1">Level 1</string>
    <string name="level_2">LEVEL 2</string>
    <string name="level_3">LEVEL 3</string>
    <string name="boss">BOSS</string>
    <string name="death_knight">Death Knight</string>
    <string name="boss_defeated">BOSS DEFEATED!</string>
    <string name="fire_elemental">Fire Elemental</string>
    <string name="srask_acz">Sraskłacz</string>
    <string name="baphomet">Baphomet</string>
    <string name="great_maze">GREAT MAZE</string>
    <string name="quick_time_event">quick time event</string>
</resources>